JNDI: glassfish-naming revisited
- note: I have doubts about thread-safety of this module

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>